--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,28 @@
+body {
+   background-color: black;
+   font-family: 'Press Start 2P', cursive;
+}
+
 h1 {
-    text-align:center;
-    font-family: sans-serif;
+    text-align: center;
+    color: orange;
+}
+
+h2 {
+    color: white;
+    margin: auto;
+    text-align: center;
+    font-size:8px;
 }
 
 p {
-    font-family: sans-serif;
     margin: auto;
-    //border: 1px solid red;
     text-align: center;
-    font-size:36px;
+    vertical-align: middle;
+    font-size: 22px;
     width: 32px;
     height: 32px;
+    padding-top: 10px;
 }
 
 .cell_clicked {
@@ -27,8 +39,8 @@ p {
    width: 32px;
    height: 32px;
    background-color: silver;
+   margin: auto;
 }
-
 
 #game_grid {
     display: grid;
@@ -37,5 +49,11 @@ p {
     width: 360px;
     height: 360px;
     margin: auto;
-    border: 2px solid gray;
+    border: 4px solid gray;
+    border-top-color: silver;
+    border-left-color: silver;
+}
+
+.cell_unclicked:active  {
+   border-color: silver;
 }
